frontend second iteration: - Extracted state management outside of tic tac toe board component to make it more reusable - Added an example component to wrap and manage the state of an offline game (without logic to check for a winner) - Some css refactoring and corrections - Added text to display a message on the board to comunicate more game state to the player

--- a/tictactoe-frontend/src/App.css
+++ b/tictactoe-frontend/src/App.css
@@ -1,6 +1,9 @@
-div {
+.app {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  place-content: center;
+  width: 100%;
+}
+
+#root {
   margin: auto;
 }
